<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.ebook.login.mvvm.viewmodel.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F5F7"
        android:orientation="vertical">


        <EditText
            android:id="@+id/id_et_reg_username"
            style="@style/EditText_login"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:background="@drawable/editext_selector"
            android:hint="@string/print_tel"
            android:inputType="number"
            android:maxLength="11"
            android:text="@={viewModel.username}"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/id_et_reg_1st_pwd"
            style="@style/EditText_login"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/editext_selector"
            android:hint="@string/print_pwd"
            android:inputType="textWebPassword"
            android:text="@={viewModel.password_1}"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/id_et_reg_2nd_pwd"
            style="@style/EditText_login"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/editext_selector"
            android:hint="@string/print_pwd_again"
            android:inputType="textWebPassword"
            android:text="@={viewModel.password_2}"
            android:textColorHint="#000000" />


        <Button
            android:id="@+id/id_btn_register"
            android:layout_width="match_parent"
            android:background="@drawable/btn_selector"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:onClick="@{() -> viewModel.register()}"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/color_white"/>


    </LinearLayout>
</layout>