<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.ebook.login.mvvm.viewmodel.ModifyPwdViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSurface"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_et_fgt_username"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:background="@drawable/editext_selector"
            android:hint="@string/print_tel"
            android:inputType="number"
            android:maxLength="11"
            android:text="@={viewModel.username}" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp">

            <EditText
                android:id="@+id/id_et_fgt_verify_code"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/editext_selector"
                android:gravity="start|center"
                android:hint="@string/print_verify_code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@={viewModel.verifyCode}"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_verifycode"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="end"
                android:background="@drawable/btn_selector"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/get_verify_code"
                android:textColor="?colorOnPrimary" />
        </FrameLayout>

        <Button
            android:id="@+id/id_btn_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_selector"
            android:onClick="@{() -> viewModel.verify()}"
            android:text="@string/next"
            android:textStyle="bold" />

    </LinearLayout>
</layout>